syntax = "proto3";

package pb;

option go_package = "github.com/ebukacodes21/peerbill-user-api/pb";

message RateRequest {
    string fiat = 1;
    string crypto = 2;
}

message RateResponse {
    float rate = 1;
}